--- a/ContactManager/Views/Contact/Index.cshtml
+++ b/ContactManager/Views/Contact/Index.cshtml
@@ -66,5 +66,5 @@
     @await Html.PartialAsync("_ValidationScriptsPartial")
     
     <script src="~/js/contact/contact.modal.js"></script>
-    <script src="js/contact/contact.DataTable.js"></script>
+    <script src="~/js/contact/contact.DataTable.js"></script>
 }
