--- a/ContactManager/Views/Shared/_Layout.cshtml
+++ b/ContactManager/Views/Shared/_Layout.cshtml
@@ -16,9 +16,14 @@
     </main>
 </div>
 
+@await Html.PartialAsync("_Toast")
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.datatables.net/2.3.6/js/dataTables.js"></script>
+
 @await RenderSectionAsync("Scripts", required: false)
+
+<script src="~/js/toast.js"></script>
 </body>
 </html>
