--- a/ContactManager/Views/Shared/_Layout.cshtml
+++ b/ContactManager/Views/Shared/_Layout.cshtml
@@ -7,7 +7,17 @@
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.3.6/css/dataTables.dataTables.css" />
+    
+    <link rel="stylesheet"
+          href="https://cdn.datatables.net/2.3.6/css/dataTables.bootstrap5.min.css"/>
+    <link rel="stylesheet" 
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -20,7 +30,9 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.datatables.net/2.3.6/js/dataTables.js"></script>
+
+<script src="https://cdn.datatables.net/2.3.6/js/dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/2.3.6/js/dataTables.bootstrap5.min.js"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 
