--- a/ContactManager/wwwroot/css/site.css
+++ b/ContactManager/wwwroot/css/site.css
@@ -21,6 +21,17 @@ body {
     transition: all 0.2s ease-in-out;
 }
 
+.btn-icon {
+    width: 35px;
+    height: 35px;
+    padding: 0;
+    border-radius: 50% !important;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .btn:hover {
     transform: translateY(-1px);
     box-shadow: 0 10px 24px rgba(0, 0, 0, 0.16);
